Prevent scroll bar from appearing on mobile device

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 
 body {
     font-family: "Manrope", sans-serif;
+    width: 100%;
     overflow: hidden;
 }
 
